<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jukepi.androidclient.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/add_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/add_settings"
        />
    
    <item 
        android:id="@+id/removeVote_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/removeVote"/>
    
    <item
        android:id="@+id/currentURL_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/currentURL"/>
    
    <item 
        android:id="@+id/SavedSongList_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/savedSongList"/>

</menu>
